# image-to-3dcad-sample

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
data/sample/: LICENSE
scripts/: generate_comparison_report.py
src/application/: __init__.py
src/application/dto/: __init__.py  evaluation_result.py  pipeline_result.py
src/application/services/: report_generator.py
src/application/use_cases/: __init__.py  evaluate_model.py  refine_cad_from_pdf.py  run_pipeline.py
src/application/workflow/: __init__.py  graph_builder.py  workflow_state.py
src/application/workflow/nodes/: __init__.py  refinement_nodes.py
src/domain/: __init__.py
src/domain/repositories/: __init__.py  few_shot_repository.py
src/domain/services/: __init__.py  cad_code_validator.py  cad_evaluator.py  cad_generator.py  cad_renderer.py  metrics_calculator.py
src/domain/value_objects/: __init__.py  cad_code.py  cad_structure_metrics.py  code_validation_result.py  euler_characteristic.py  multiview_image.py  technical_drawing_image.py
src/infrastructure/: __init__.py
src/infrastructure/cad/: __init__.py  renderer_impl.py
src/infrastructure/llm/: __init__.py  cad_evaluator_impl.py  cad_generator_impl.py  vlm_client.py
src/infrastructure/llm/prompt_templates/: __init__.py  build123d_api_reference.py  cad_generation.py  technical_drawing.py
src/infrastructure/repositories/: __init__.py  few_shot_repository_impl.py
src/infrastructure/services/: __init__.py  metrics_calculator_impl.py
src/presentation/: __init__.py
src/presentation/cli/: __init__.py  main.py
tests/: __init__.py
tests/application/dto/: test_pipeline_result.py
tests/application/services/: test_report_generator.py
tests/application/use_cases/: test_run_pipeline.py
tests/domain/: test_value_objects.py
tests/integration/: __init__.py  test_pipeline_cli.py
